sumo/tests/duarouter/routes/style1_input/errors/vehicle_empty_arrivallane/options.duarouter
--net-file=input_net.net.xml --sumo-input=input_routes.rou.xml -o routes.rou.xml
